# aws-cli-sso-profiles-plugin

./: LICENSE.txt  README.md  pyproject.toml
src/aws_cli_sso_profiles_plugin/: sso_profiles.py
