[project]
name = "aws-cli-sso-profiles-plugin"
version = "0.2.0"
description = "AWS CLI Plugin to generate AWS CLI Profiles from AWS SSO Sessions"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Neil Ramsay", email = "2934552+neilramsay@users.noreply.github.com" },
]
keywords = ["awscli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Plugins",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.8" # AWS CLI version limits
dependencies = []         # awscli and botocore are provided by awscli directly

[dependency-groups]
dev = ["awscli>=2.22.13", "botocore>=1.37.14"]

[project.urls]
source = "https://github.com/neilramsay/aws-cli-sso-profiles-plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
awscli = { git = "https://github.com/aws/aws-cli.git", rev = "v2" }
